:sparkles: adaptação de grid para mais de um job

--- a/posts/2021-02-15-apple-pay.md
+++ b/posts/2021-02-15-apple-pay.md
@@ -1,6 +1,6 @@
 ---
 title: Itaú Apple pay
-description: Landing page desenvolvida para a divulgação do novo sistema de pagamento Apple Pay.
+description: Divulgação do lançamento
 technologies: HTML, CSS e Javascript
 category: Jüssi
 section: portifolio
